@@ -7,6 +7,7 @@ Changelog
  * Added another valid AudioBoom oEmbed pattern (Bertrand Bordage)
  * Added `annotate_score` support to PostgreSQL search backend (Bertrand Bordage)
  * Pillow's image optimisation is now applied when saving PNG images (Dmitry Vasilev)
+ * JS / CSS media files can now be associated with Draftail feature definitions (Matt Westcott)
  * Fix: Handle all exceptions from `Image.get_file_size` (Andrew Plummer)
  * Fix: Fix display of breadcrumbs in ModelAdmin (LB (Ben Johnston))
 
